--- a/.gitignore
+++ b/.gitignore
@@ -9,15 +9,30 @@ node_modules/
 .env.test.local
 .env.production.local
 
+# Production environment files (keep templates)
+# .env.production
+# .env.docker
+
 # Build outputs
 */dist/
 */build/
+
+# Docker volumes and data
+docker-data/
+mongodb_data/
+
+# SSL certificates
+nginx/ssl/
+*.pem
+*.key
+*.crt
 
 # Logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 lerna-debug.log*
+*.log
 
 # Runtime data
 pids
@@ -93,3 +108,13 @@ temp/
 .Trashes
 ehthumbs.db
 Thumbs.db
+
+# PM2 ecosystem files
+ecosystem.config.js
+
+# Docker Compose override files
+docker-compose.override.yml
+
+# Backup files
+*.backup
+backup/
