--- a/package.json
+++ b/package.json
@@ -8,13 +8,15 @@
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "server": "cd server && npm run dev",
     "client": "cd client && npm run dev",
-    "build": "cd client && npm run build",
-    "start": "cd server && npm start"
+    "build": "cd client && npm install && npm run build",
+    "start": "cd server && npm start",
+    "vercel-build": "cd client && npm install && npm run build"
   },
   "keywords": ["streaming", "synchronized", "media", "websocket", "youtube", "react", "nodejs"],
   "author": "Stream2Gether Team",
   "license": "MIT",
   "devDependencies": {
     "concurrently": "^8.2.0"
-  }
+  },
+  "dependencies": {}
 }
