--- a/server/.env.production
+++ b/server/.env.production
@@ -7,11 +7,11 @@ NODE_ENV=production
 
 # Database Configuration
 # Use MongoDB Atlas for production
-MONGODB_URI=mongodb+srv://username:password@cluster.mongodb.net/stream2gether
+MONGODB_URI=mongodb+srv://amargrd00:vUIGSdr8S9aoxvzY@cluster0.er9bdva.mongodb.net/STREAM2GETHER?retryWrites=true&w=majority&appName=Cluster0
 
 # CORS Configuration
 # Update this to your actual frontend domain
-CLIENT_URL=https://yourdomain.com
+CLIENT_URL=https://stream2gether.vercel.app/
 
 # Security Configuration (optional)
 JWT_SECRET=your-super-secret-jwt-key-here
