--- a/client/.env.production
+++ b/client/.env.production
@@ -1,11 +1,13 @@
 # Production Environment Variables
 # Copy this file to .env and update the values for your production environment
 
-# Backend API URL (your production backend domain)
-VITE_API_BASE_URL=https://yourbackend.com/api
+# Backend API URL (same domain for single deployment)
+# For Render single deployment, this will be the same domain
+VITE_API_BASE_URL=https://stream2gether.onrender.com/api
 
-# WebSocket Server URL (your production backend domain)
-VITE_SERVER_URL=https://yourbackend.com
+# WebSocket Server URL (same domain for single deployment)  
+# For Render single deployment, this will be the same domain
+VITE_SERVER_URL=https://stream2gether.onrender.com
 
 # Optional: Analytics or other production configs
 # VITE_GOOGLE_ANALYTICS_ID=GA-XXXXXXXXX
