--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "stream2gether",
   "version": "1.0.0",
-  "description": "Real-time synchronized media platform using MERN stack",
+  "description": "Real-time synchronized Google Drive video streaming platform using MERN stack",
   "main": "index.js",
   "scripts": {
     "install-all": "npm install && cd server && npm install && cd ../client && npm install",
@@ -10,9 +10,9 @@
     "client": "cd client && npm run dev",
     "build": "cd client && npm install && npm run build",
     "start": "cd server && npm start",
-    "vercel-build": "cd client && npm install && npm run build"
+    "render-build": "cd client && npm install && npm run build"
   },
-  "keywords": ["streaming", "synchronized", "media", "websocket", "youtube", "react", "nodejs"],
+  "keywords": ["streaming", "synchronized", "media", "websocket", "google-drive", "react", "nodejs"],
   "author": "Stream2Gether Team",
   "license": "MIT",
   "devDependencies": {
