--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-rate-limit": "^6.11.2",
+    "googleapis": "^128.0.0",
     "helmet": "^7.2.0",
     "mongoose": "^7.5.0",
     "socket.io": "^4.7.2",
