--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,8 @@
     "react-dom": "^18.2.0",
     "react-player": "^2.16.1",
     "react-router-dom": "^6.15.0",
-    "socket.io-client": "^4.7.2"
+    "socket.io-client": "^4.7.2",
+    "vite": "^4.4.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
@@ -26,7 +27,9 @@
     "eslint": "^8.45.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.3",
-    "vite": "^4.4.5"
+    "eslint-plugin-react-refresh": "^0.4.3"
+  },
+  "engines": {
+    "node": ">=16.0.0"
   }
 }
