--- a/render.yaml
+++ b/render.yaml
@@ -8,7 +8,7 @@ services:
       cd client && 
       echo "VITE_API_BASE_URL=https://stream2gether.onrender.com/api" > .env &&
       echo "VITE_SERVER_URL=https://stream2gether.onrender.com" >> .env &&
-      npm ci && npm run build &&
+      npm install && npm run build &&
       cd ../server && npm ci --only=production
     startCommand: cd server && npm start
     envVars:
