--- a/client/package.json
+++ b/client/package.json
@@ -18,12 +18,12 @@
     "react-player": "^2.16.1",
     "react-router-dom": "^6.15.0",
     "socket.io-client": "^4.7.2",
-    "vite": "^4.4.5"
+    "vite": "^4.4.5",
+    "@vitejs/plugin-react": "^4.0.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
-    "@vitejs/plugin-react": "^4.0.3",
     "eslint": "^8.45.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
