--- a/.gitignore
+++ b/.gitignore
@@ -2,20 +2,37 @@
 node_modules/
 */node_modules/
 
-# Environment variables
+# Environment variables - NEVER COMMIT THESE
 .env
+.env.*
+!.env.example
+!.env.production.example
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 
-# Production environment files (keep templates)
+# Production environment files (keep templates only)
 .env.production
 .env.docker
+.env.demo
+.env.staging
+
+# Sensitive files and credentials
+*.pem
+*.key
+*.crt
+*.p12
+*.pfx
+service-account.json
+google-credentials.json
+aws-credentials.json
 
 # Build outputs
 */dist/
 */build/
+build/
+dist/
 
 # Docker volumes and data
 docker-data/
